# rmpd

./: .gitignore  .yamllint.yml  CI.md  Cargo.toml  FEATURE_PARITY.md  LICENSE-MIT  README.md  build.sh  clippy.toml  deny.toml  libtag.rlib  rmpd.toml  rustfmt.toml
.cargo/: audit.toml  config.toml
.claude/: mind.mv2
.github/: CI_CHECKLIST.md  dependabot.yml  pull_request_template.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  lint.yml  release.yml  renovate.yml  security.yml
.omc/: project-memory.json
.omc/sessions/: 241113fa-68d1-4c49-bc2d-631bb38a2e92.json  67f9f76a-34c1-4ff0-9302-5f020ac84b71.json
debian/: changelog  control  debhelper-build-stamp  docs  files  postinst  preinst  rmpd.1  rmpd.manpages  rmpd.postrm.debhelper  rmpd.substvars  rules  watch
debian/rmpd/DEBIAN/: conffiles  control  md5sums  postinst  postrm  preinst  prerm
debian/rmpd/etc/rmpd/: rmpd.toml
debian/rmpd/usr/lib/systemd/system/: rmpd.service
debian/rmpd/usr/share/doc/rmpd/: copyright
debian/upstream/: metadata
openspec/changes/workspace-deduplication-refactor/: design.md  proposal.md  tasks.md
openspec/changes/workspace-deduplication-refactor/specs/audio-output-consolidation/: spec.md
openspec/changes/workspace-deduplication-refactor/specs/command-dispatch-derive/: spec.md
openspec/changes/workspace-deduplication-refactor/specs/core-shared-utilities/: spec.md
openspec/changes/workspace-deduplication-refactor/specs/error-handling-standardization/: spec.md
openspec/changes/workspace-deduplication-refactor/specs/protocol-handler-helpers/: spec.md
openspec/changes/workspace-deduplication-refactor/specs/test-infrastructure-consolidation/: spec.md
rmpd/: Cargo.toml
rmpd-core/: Cargo.toml
rmpd-core/src/: config.rs  discovery.rs  error.rs  event.rs  filter.rs  lib.rs  messaging.rs  partition.rs  path.rs  playback.rs  queue.rs  song.rs  state.rs  storage.rs  tag.rs  test_utils.rs  time.rs
rmpd-core/src/storage/: platform.rs
rmpd-core/tests/: filter_tests.rs  queue_tests.rs  song_tests.rs  state_tests.rs
rmpd-library/: Cargo.toml
rmpd-library/examples/: test_extract.rs  test_m4a_artwork.rs
rmpd-library/src/: artwork.rs  cue.rs  database.rs  fingerprint.rs  lib.rs  metadata.rs  scanner.rs  watcher.rs
rmpd-library/tests/: compatibility_suite.rs  harness_demo.rs  scanner_tests.rs
rmpd-library/tests/common/: comparison.rs  mod.rs  rmpd_harness.rs
rmpd-library/tests/compatibility/: artwork_tests.rs  database_tests.rs  edge_cases_tests.rs  metadata_tests.rs  mod.rs  search_tests.rs
rmpd-library/tests/fixtures/: mod.rs  pregenerated.rs
rmpd-library/tests/fixtures/generator/: mod.rs
rmpd-library/tests/fixtures/samples/: README.md  basic.flac  basic.m4a  basic.opus  extended.flac  generate_fixtures.sh  minimal.flac  unicode.flac
rmpd-macros/: Cargo.toml
rmpd-macros/src/: lib.rs
rmpd-player/: Cargo.toml
rmpd-player/examples/: list_devices.rs
rmpd-player/src/: audio_output.rs  conversion.rs  cpal_utils.rs  crossfade.rs  decoder.rs  dop.rs  dop_output.rs  encoder.rs  engine.rs  fifo_output.rs  filter.rs  httpd_output.rs  lib.rs  multi_output.rs  null_output.rs  output.rs  output_registry.rs  output_slot.rs  pipe_output.rs  pipewire_output.rs  recorder_output.rs  resampler.rs
rmpd-player/tests/: decoder_tests.rs  edge_cases.rs  format_specific_tests.rs
rmpd-player/tests/common/: mod.rs
rmpd-player/tests/fixtures/: generator.rs  mod.rs  pregenerated.rs  reference.rs
rmpd-player/tests/fixtures/samples/: README.md  generate_fixtures.sh  highres.flac  mono.flac  silence.flac  sine_1khz.flac  sine_1khz.m4a  sine_1khz.opus  sine_440hz.flac
rmpd-player/tests/format_specific/: dsd.rs  mod.rs
rmpd-plugin/: Cargo.toml
rmpd-plugin/src/: lib.rs  source.rs
rmpd-protocol/: Cargo.toml
rmpd-protocol/src/: connection.rs  discovery.rs  filter.rs  helpers.rs  lib.rs  messaging.rs  mpris.rs  parser.rs  queue_playback.rs  response.rs  server.rs  state.rs  statefile.rs
rmpd-protocol/src/commands/: connection.rs  database.rs  fingerprint.rs  messaging.rs  mod.rs  options.rs  outputs.rs  partition.rs  playback.rs  playlists.rs  queue.rs  reflection.rs  stickers.rs  storage.rs  utils.rs
rmpd-protocol/tests/: advanced_commands.rs  basic_commands.rs  command_metadata.rs  conformance_suite.rs  database_commands.rs  discovery_commands.rs  fingerprint_commands.rs  idle_noidle_race.rs  partition_commands.rs  playback_control.rs  playlist_commands.rs  queue_operations.rs  reflection_commands.rs  source_resolve.rs  source_sticker.rs  state_resume_behavior.rs  statefile_integration.rs  stickers_commands.rs  storage_commands.rs  stored_playlist_idle.rs
rmpd-protocol/tests/common/: mod.rs  state_helpers.rs  tcp_harness.rs
rmpd-protocol/tests/conformance/: command_batching.rs  connection_lifecycle.rs  database_conformance.rs  database_extended.rs  error_handling.rs  filter_matching.rs  idle_conformance.rs  messaging_conformance.rs  mod.rs  options_conformance.rs  options_extended.rs  output_conformance.rs  parser_regressions.rs  partition_conformance.rs  playback_conformance.rs  playback_extended.rs  queue_conformance.rs  queue_extended.rs  range_parsing.rs  reflection_conformance.rs  status_and_stats.rs  sticker_conformance.rs  storage_conformance.rs  stored_playlists_conformance.rs  stored_playlists_extended.rs
rmpd-source/: Cargo.toml
rmpd-source/src/: filesystem.rs  lib.rs  registry.rs  subsonic.rs
rmpd-stream/: Cargo.toml
rmpd-stream/src/: lib.rs
rmpd/src/: app.rs  main.rs
