[workspace]
resolver = "2"
members = [
    "rmpd",
    "rmpd-core",
    "rmpd-macros",
    "rmpd-protocol",
    "rmpd-player",
    "rmpd-library",
    "rmpd-plugin",
    "rmpd-stream",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
authors = ["rmpd contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/M0Rf30/rmpd"
description = "A modern Music Player Daemon with DSD support"
readme = "README.md"
keywords = ["mpd", "audio", "player", "dsd", "music"]
categories = ["multimedia::audio", "network-programming"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.12"

# Audio stack
# Use remote Symphonia fork with DSD support
symphonia = { git = "https://github.com/M0Rf30/Symphonia", rev = "a2796cc00f07bb75c19f2301873c96f9a6a7b719", features = ["all", "dsd"] }
lofty = { git = "https://github.com/M0Rf30/lofty-rs", rev = "ae2411457c17c12338def0c5d42455832282279f" }
cpal = { git = "https://github.com/RustAudio/cpal", rev = "94ecb6ec64546308885a59b38e29f938796e8100", default-features = false }
rubato = "3.0"

# Networking & Protocol
reqwest = { version = "0.13", features = ["stream"] }
winnow = "1.0"

# Database & Storage
rusqlite = { version = "0.40", features = ["bundled"] }
tantivy = "0.26"
toml = "1.1"

# Plugin System
libloading = "0.9"
abi_stable = "0.11"

# Utilities
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-full = "0.7"
camino = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
rand = "0.10"
dirs = "6"
sha2 = "0.11"

# Advanced features
mdns-sd = "0.20"                  # Network discovery
chromaprint-sys-next = "1.6"      # Audio fingerprinting
base64 = "0.22"                   # Base64 encoding
nix = { version = "0.31", features = ["mount", "process", "fs"] }  # Linux mount syscalls

# Shared workspace crates
rmpd-core = { path = "rmpd-core" }
rmpd-macros = { path = "rmpd-macros" }
rmpd-protocol = { path = "rmpd-protocol" }
rmpd-player = { path = "rmpd-player" }
rmpd-library = { path = "rmpd-library" }
rmpd-plugin = { path = "rmpd-plugin" }
rmpd-stream = { path = "rmpd-stream" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
