[workspace]
resolver = "2"
members = [
    "rmpd",
    "rmpd-core",
    "rmpd-macros",
    "rmpd-protocol",
    "rmpd-player",
    "rmpd-library",
    "rmpd-plugin",
    "rmpd-source",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
authors = ["rmpd contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/M0Rf30/rmpd"
description = "A modern Music Player Daemon with DSD support"
readme = "README.md"
keywords = ["mpd", "audio", "player", "dsd", "music"]
categories = ["multimedia::audio", "network-programming"]

[workspace.dependencies]
# Core dependencies
tokio = { version = "1", features = ["full"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
rayon = "1.12"

# Audio stack
# Use remote Symphonia fork with DSD support
symphonia = { git = "https://github.com/M0Rf30/Symphonia", rev = "e0649c9c77e6104a03ac99ce4600fef420b62478", features = ["all", "dsd"] }
lofty = { git = "https://github.com/M0Rf30/lofty-rs", rev = "bd7defe1d4f0408958787e4aa799dca11a71b90a" }
cpal = { git = "https://github.com/RustAudio/cpal", rev = "a7f56fff9d9ae325a3c9c8c44194bc10eb60d7ee", default-features = false }
rubato = "3.0"                   # High-quality (anti-aliased) sample-rate conversion
audioadapter-buffers = "3.0"     # Buffer wrappers (InterleavedSlice) for rubato 3.x

# Networking & Protocol
reqwest = { version = "0.13", features = ["stream"] }
winnow = "1.0"

# Database & Storage
rusqlite = { version = "0.40", features = ["bundled"] }
tantivy = "0.26"
toml = "1.1"
parking_lot = "0.12"


# Utilities
clap = { version = "4", features = ["derive"] }
notify = "8"
notify-debouncer-full = "0.7"
camino = "1"
serde = { version = "1", features = ["derive"] }
bytes = "1"
rand = "0.10"
dirs = "6"
sha2 = "0.11"

# Advanced features
mdns-sd = "0.20"                  # Network discovery
mpris-server = { version = "0.10", features = ["tokio"] }  # MPRIS D-Bus media player interface
chromaprint-sys-next = "1.6"      # Audio fingerprinting
base64 = "0.22"                   # Base64 encoding
nix = { version = "0.31", features = ["mount", "process", "fs"] }  # Linux mount syscalls

# Shared workspace crates
rmpd-core = { path = "rmpd-core" }
rmpd-macros = { path = "rmpd-macros" }
rmpd-protocol = { path = "rmpd-protocol" }
rmpd-player = { path = "rmpd-player" }
rmpd-library = { path = "rmpd-library" }
rmpd-plugin = { path = "rmpd-plugin" }
rmpd-stream = { path = "rmpd-stream" }
rmpd-source = { path = "rmpd-source" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
