[package]
name = "rmpd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
camino = { workspace = true, features = ["serde1"] }
toml.workspace = true
rand = "0.9"
dirs = "6"
rusqlite = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }

[features]
default = []
database-errors = ["rusqlite"]
player-errors = ["symphonia", "cpal"]
test-utils = []
