[package]
name = "rmpd-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
camino = { workspace = true, features = ["serde1"] }
toml.workspace = true
rand = "0.10"
dirs = "6"
rusqlite = { workspace = true, optional = true }
symphonia = { workspace = true, optional = true }
cpal = { workspace = true, optional = true }
lofty = { workspace = true, optional = true }
tantivy = { workspace = true, optional = true }
notify = { workspace = true, optional = true }
mdns-sd = { workspace = true, optional = true }

[features]
default = []
database-errors = ["rusqlite"]
player-errors = ["symphonia", "cpal"]
library-errors = ["lofty", "tantivy", "notify"]
protocol-errors = ["mdns-sd"]
test-utils = []

[[test]]
name = "queue_tests"
required-features = ["test-utils"]

[[test]]
name = "filter_tests"
required-features = ["test-utils"]

[[test]]
name = "state_tests"
required-features = ["test-utils"]

[[test]]
name = "song_tests"
required-features = ["test-utils"]
