[package]
name = "rmpd-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# symphonia and tantivy used in examples and tests
# thiserror used for error handling macros
ignored = ["symphonia", "tantivy", "thiserror"]

[dependencies]
rmpd-core = { workspace = true, features = ["database-errors"] }
rusqlite.workspace = true
lofty.workspace = true
symphonia.workspace = true
tantivy.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
camino.workspace = true
sha2.workspace = true
