[package]
name = "rmpd-library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# symphonia and tantivy used in examples and tests
# thiserror used for error handling macros
# base64 used in fingerprint module for encoding
ignored = ["symphonia", "tantivy", "thiserror", "base64"]

[dependencies]
rmpd-core = { workspace = true, features = ["database-errors", "library-errors"] }
rmpd-player.workspace = true
rusqlite.workspace = true
lofty.workspace = true
symphonia.workspace = true
tantivy.workspace = true
notify.workspace = true
notify-debouncer-full.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
camino.workspace = true
sha2.workspace = true
chromaprint-sys-next.workspace = true
base64.workspace = true
rayon.workspace = true
icu_collator = "2.1.1"
[dev-dependencies]
rmpd-core = { workspace = true, features = ["test-utils"] }
tempfile = "3"
