[package]
name = "rmpd-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
# thiserror used for error handling macros
ignored = ["thiserror"]

[features]
# Enable PipeWire audio backend. Requires bindgen at build time (slow).
asio = ["cpal/asio"]
jack = ["cpal/jack"]
pipewire = ["cpal/pipewire"]

[dependencies]
rmpd-core = { workspace = true, features = ["player-errors"] }
symphonia.workspace = true
cpal.workspace = true
rubato.workspace = true
audioadapter-buffers.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
rmpd-core = { workspace = true, features = ["test-utils"] }
tempfile = "3"
approx = "0.5"
