[package]
name = "rmpd-player"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[package.metadata.cargo-machete]
# thiserror used for error handling macros
ignored = ["thiserror"]

[features]
asio = ["cpal/asio"]
jack = ["cpal/jack"]
# Enable the native PipeWire audio backend. Requires bindgen at build time
# (slow): the pipewire-sys crate generates libpipewire/libspa bindings via clang.
pipewire = ["dep:pipewire"]

[dependencies]
rmpd-core = { workspace = true, features = ["player-errors"] }
symphonia.workspace = true
cpal.workspace = true
rubato.workspace = true
audioadapter-buffers.workspace = true
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
rmpd-stream.workspace = true

# PipeWire is a Linux-only audio backend; gate the optional dependency to Linux
# targets so `--all-features` builds on macOS/Windows don't require the system
# libpipewire/libspa libraries.
[target.'cfg(target_os = "linux")'.dependencies]
pipewire = { version = "0.9", optional = true }

[dev-dependencies]
rmpd-core = { workspace = true, features = ["test-utils"] }
tempfile = "3"
approx = "0.5"
