[package]
name = "rmpd-plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# Plugin system dependencies - used for future plugin loading infrastructure
ignored = ["abi_stable", "libloading", "thiserror"]

[dependencies]
libloading.workspace = true
abi_stable.workspace = true
thiserror.workspace = true
