[package]
name = "rmpd-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# bytes used for protocol handling
# thiserror used for error handling macros
ignored = ["bytes", "thiserror"]

[dependencies]
rmpd-core.workspace = true
rmpd-library.workspace = true
rmpd-player.workspace = true
tokio.workspace = true
winnow.workspace = true
thiserror.workspace = true
bytes.workspace = true
tracing.workspace = true
anyhow.workspace = true
rand = "0.9"
mdns-sd.workspace = true

[dev-dependencies]
tempfile = "3"
