[package]
name = "rmpd-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# Streaming support - to be implemented, keeping dependencies for future use
ignored = ["reqwest", "rmpd-core", "thiserror", "tokio"]

[dependencies]
rmpd-core.workspace = true
reqwest.workspace = true
tokio.workspace = true
thiserror.workspace = true
