[package]
name = "rmpd-stream"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
symphonia.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
parking_lot.workspace = true
tracing.workspace = true
