[package]
name = "rmpd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
# rmpd-player used by protocol handlers
ignored = ["rmpd-player"]

[[bin]]
name = "rmpd"
path = "src/main.rs"

[dependencies]
rmpd-core.workspace = true
rmpd-protocol.workspace = true
rmpd-player.workspace = true
rmpd-library.workspace = true

tokio.workspace = true
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
